--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,17 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			
+			<plugin>
+		     <groupId>com.google.cloud.tools</groupId>
+		     <artifactId>appengine-maven-plugin</artifactId>
+		     <version>1.3.2</version>
+		     <configuration>
+		       <stage.enableJarSplitting>true</stage.enableJarSplitting>
+		       <deploy.stopPreviousVersion>true</deploy.stopPreviousVersion>
+		       <cloudSdkPath>/google/google-cloud-sdk</cloudSdkPath>
+		     </configuration>
+  </plugin>
 		</plugins>
 	</build>
 </project>
