--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,13 +6,13 @@
 
 # Connection url for the database "netgloo_blog"
 
-#spring.datasource.url = jdbc:mysql://sql10.freemysqlhosting.net:3306/sql10262761?useSSL=false
-#spring.datasource.username = sql10262761
-#spring.datasource.password = law5VVeS61
+spring.datasource.url = jdbc:mysql://sql10.freemysqlhosting.net:3306/sql10262761?useSSL=false
+spring.datasource.username = sql10262761
+spring.datasource.password = law5VVeS61
 
-spring.datasource.url = jdbc:mysql://localhost:3306/carcaldb?useSSL=false
-spring.datasource.username = root
-spring.datasource.password = 14nico14
+#spring.datasource.url = jdbc:mysql://localhost:3306/carcaldb?useSSL=false
+#spring.datasource.username = root
+#spring.datasource.password = 14nico14
 
 # Keep the connection alive if idle for a long time (needed in production)
 #spring.datasource.testWhileIdle = true
