--- a/pom.xml
+++ b/pom.xml
@@ -64,7 +64,17 @@
 		     <groupId>com.google.cloud.tools</groupId>
 		     <artifactId>appengine-maven-plugin</artifactId>
 		     <version>1.3.2</version>
-			</plugin>
+		     
+		     <executions>
+			    <execution>
+			      <phase>prepare-package</phase>
+			      <goals>
+			        <goal>genRepoInfoFile</goal>
+			      </goals>
+			    </execution>
+			  </executions>
+		     
+			</plugin>			
 		</plugins>
 	</build>
 </project>
