--- a/pom.xml
+++ b/pom.xml
@@ -48,8 +48,19 @@
 		<dependency>
 		    <groupId>mysql</groupId>
 		    <artifactId>mysql-connector-java</artifactId>
-		    <version>5.1.47</version>
+		    <version>5.1.44</version>
 		</dependency>
+		
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		</dependency>
+		    
+		<dependency>
+		    <groupId>com.google.cloud.sql</groupId>
+		    <artifactId>mysql-socket-factory</artifactId>
+		    <version>1.0.4</version>
+		</dependency>	
 		
 	</dependencies>
 
@@ -64,17 +75,9 @@
 		     <groupId>com.google.cloud.tools</groupId>
 		     <artifactId>appengine-maven-plugin</artifactId>
 		     <version>1.3.2</version>
-		     
-		     <executions>
-			    <execution>
-			      <phase>prepare-package</phase>
-			      <goals>
-			        <goal>genRepoInfoFile</goal>
-			      </goals>
-			    </execution>
-			  </executions>
-		     
-			</plugin>			
+			</plugin>	
+					
 		</plugins>
+		<finalName>carcal-spring-boot</finalName>
 	</build>
 </project>
