--- a/src/main/appengine/app.yaml
+++ b/src/main/appengine/app.yaml
@@ -1,6 +1,6 @@
-runtime: java 
-env: flex 
+runtime: java
+env: flex
 
-handlers: 
-- url: /.* 
-  script: este campo es obligatorio, pero se ignora
+handlers:
+- url: /.*
+  script: this field is required, but ignored
