--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 # = DATA SOURCE
 # ===============================
 
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 # Set here configurations for the database connection
 
 # Connection url for the database "netgloo_blog"
@@ -14,9 +15,9 @@
 #spring.datasource.username = root
 #spring.datasource.password = 14nico14
 
-#spring.datasource.url = jdbc:mysql://35.199.94.180:3306/carcaldata?useSSL=false
-#spring.datasource.username = root
-#spring.datasource.password = 14nico14
+spring.datasource.url = jdbc:mysql://google/carcaldata?cloudSqlInstance=carcal-1540568900831:southamerica-east1:carcaldb&socketFactory=com.google.cloud.sql.mysql.SocketFactory&user=root&password=14nic14&useSSL=false
+spring.datasource.username = root
+spring.datasource.password = 14nico14
 
 # Keep the connection alive if idle for a long time (needed in production)
 #spring.datasource.testWhileIdle = true
