Add surefire pluging

--- a/pom.xml
+++ b/pom.xml
@@ -75,7 +75,15 @@
 		     <groupId>com.google.cloud.tools</groupId>
 		     <artifactId>appengine-maven-plugin</artifactId>
 		     <version>1.3.2</version>
-			</plugin>	
+			</plugin>
+			
+			<plugin>
+	            <groupId>org.apache.maven.plugins</groupId>
+	            <artifactId>maven-surefire-plugin</artifactId>
+	            <configuration>
+	                <useSystemClassLoader>false</useSystemClassLoader>
+	            </configuration>
+	        </plugin>	
 					
 		</plugins>
 		<finalName>carcal-spring-boot</finalName>
